AH 163: Handle DayOffInfo after creating a new DayOffCategory
