# app/models/day_off_category.rb
@@ -11,4 +11,13 @@ class DayOffCategory < ApplicationRecord
   def self.search(params)
     DayOffCategory.where({ status: params[:status].presence }.compact)
   end
+
+  def build_day_off_infos(day_off_infos_params)
+    employee_ids = day_off_infos_params[:apply_for_all_employees].present? ? User.all.pluck(:id) : day_off_infos_params[:employee_ids]
+    return unless employee_ids.present?
+    employee_ids.each do |employee_id|
+      employee = User.find employee_id
+      employee.day_off_infos.create! hours: total_hours_default, day_off_category_id: id
+    end
+  end
 end
