# public/swagger.yaml
@@ -102,6 +102,8 @@ paths:
           $ref: '#/components/responses/Permission'
         '422':
           $ref: '#/components/responses/InvalidParams'
+        '404':
+          $ref: '#/components/responses/NotFound'
   '/day_off_categories/{id}':
     patch:
       tags:
@@ -1328,12 +1330,15 @@ components:
         name:
           type: string
           example: "Summer"
-        description:
-          type: string
-          example: "When don't go to school"
         total_hours_default:
           type: integer
           example: 16
+        status:
+          type: string
+          example: active
+        description:
+          type: string
+          example: "When don't go to school"
       required:
       - name
       - total_hours_default
@@ -1580,6 +1585,14 @@ components:
         description:
           type: string
           example: "When don't go to school"
+        apply_for_all_employees:
+          type: boolean
+          example: true
+        employee_ids:
+          type: array
+          items:
+            type: string
+            example: 1
       required:
       - name
       - total_hours_default
